// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Doesn't fail on receiving Apollo data 1`] = `
<div
  className="pages__Page-sc-9mrxf5-0 jnmkXX"
>
  <h1
    className="pages__Header-sc-9mrxf5-1 SMwOW"
  >
    Komfy
  </h1>
  <h2>
    Project Status ⚡
  </h2>
  <div
    className="pages__Links-sc-9mrxf5-3 fwJWiw"
  >
    <a
      href="https://github.com/komfy"
      onClick={[Function]}
    >
      GitHub
    </a>
    <a
      href="https://crowdforge.io/projects/534"
      onClick={[Function]}
    >
      CrowdForge
    </a>
    <a
      href="https://twitter.com/KomfySocial"
      onClick={[Function]}
    >
      Twitter
    </a>
  </div>
  <p
    className="pages__Status-sc-9mrxf5-2 hGXJBu"
  >
    Soon there will be new stuff. You'll be able to create an account and publish images in text. Pre-alpha is close.
  </p>
  <p>
    I'll answer all questions here: 
    <a
      href="https://t.me/talentless_guy"
      onClick={[Function]}
    >
      @talentless_guy
    </a>
  </p>
  <div>
    <span>
      GraphQL request:
      <b>
         
      </b>
    </span>
  </div>
  <a
    href="/user/4219319"
    onClick={[Function]}
  >
    Random user page
  </a>
  <a
    href="/error"
    onClick={[Function]}
  >
    Example error page
  </a>
</div>
`;

exports[`Renders user page correctly 1`] = `
<div
  className="pages__Page-sc-9mrxf5-0 jnmkXX"
>
  <p>
    Hello, #
    Ivan
    !
  </p>
  <p>
    There will be content soon.
  </p>
  <p>
    You need to wait a bit until we release our pre-alpha.
  </p>
  <a
    href="/"
    onClick={[Function]}
  >
    Home
  </a>
</div>
`;

exports[`Shows error text when wrong link 1`] = `
<div
  className="pages__Page-sc-9mrxf5-0 jnmkXX"
>
  <h1
    className="pages__Header-sc-9mrxf5-1 SMwOW"
  >
    Komfy
  </h1>
  <h2>
    Project Status ⚡
  </h2>
  <div
    className="pages__Links-sc-9mrxf5-3 fwJWiw"
  >
    <a
      href="https://github.com/komfy"
      onClick={[Function]}
    >
      GitHub
    </a>
    <a
      href="https://crowdforge.io/projects/534"
      onClick={[Function]}
    >
      CrowdForge
    </a>
    <a
      href="https://twitter.com/KomfySocial"
      onClick={[Function]}
    >
      Twitter
    </a>
  </div>
  <p
    className="pages__Status-sc-9mrxf5-2 hGXJBu"
  >
    Soon there will be new stuff. You'll be able to create an account and publish images in text. Pre-alpha is close.
  </p>
  <p>
    I'll answer all questions here: 
    <a
      href="https://t.me/talentless_guy"
      onClick={[Function]}
    >
      @talentless_guy
    </a>
  </p>
  <div>
    <span>
      GraphQL request:
      <b>
         
      </b>
    </span>
  </div>
  <a
    href="/user/3837942"
    onClick={[Function]}
  >
    Random user page
  </a>
  <a
    href="/error"
    onClick={[Function]}
  >
    Example error page
  </a>
</div>
`;
